# homelab_ansible

./: .ansible-lint-ignore  .ansible-lint.yml  .gitignore  .isort.cfg  .pre-commit-config.yaml  .yamllint.yml  CHANGELOG.md  CLAUDE.md  Pipfile  README.md  VERSION.toml  ansible.cfg  args_to_readme  devbox.json  devfile.yaml  execution-environment.yml  galaxy.yml  inventory.yml  justfile  prek.toml  pyproject.toml  requirements.yml  setup.yml  test-requirements.txt  tox-ansible.ini
.github/: dependabot.yml
.github/workflows/: containers.yml  molecule-incus.yml  release.yml  tag.yml  tests.yml
changelogs/: .plugin-cache.yaml  changelog.yaml  config.yaml
context/_build/: requirements.yml
docs/docsite/: links.yml
extensions/: Vagrantfile
extensions/ee/debian-bookworm/: ensurepip.patch  execution-environment.yml
extensions/ee/debian-trixie/: ensurepip.patch  execution-environment.yml
extensions/ee/fedora-41/: execution-environment.yml
extensions/ee/fedora-42/: execution-environment.yml
extensions/ee/rhel-10/: execution-environment.yml
extensions/ee/rhel-9/: execution-environment.yml
extensions/ee/ubuntu-jammy/: ensurepip.patch  execution-environment.yml
extensions/ee/ubuntu-noble/: ensurepip.patch  execution-environment.yml
extensions/molecule/default/: cleanup.yml  converge.yml  create.yml  molecule.yml  prepare.yml  verify.yml
extensions/molecule/integration_common/: molecule.yml
extensions/packer/: pkr-builder.pkr.hcl  pkr-plugins.pkr.hcl  pkr-sources.pkr.hcl  pkr-variables.pkr.hcl
group_vars/: all
roles/base/: README.md
roles/base/defaults/: main.yml
roles/base/handlers/: main.yml
roles/base/meta/: argument-specs.yml  argument_specs.yml  main.yml
roles/base/tasks/: ca-config.yml  dns-config.yml  fqdn-hosts.yml  group-manage-local.yml  grub-config.yml  main.yml  ntp-config.yml  (+9 more)
roles/common/: README.md
roles/run/: README.md
scripts/: determine_changed_roles.sh
test/sanity/: ignore.txt
tests/unit/: test_basic.py
(+89 files in other folders)
