[project]
name = "homelab-ansible"
version = "0.1.0"
requires-python = ">=3.13.2"
dependencies = [
    "ansible>=12.0.0",
    "ansible-core>=2.19.2",
    "cryptography>=46.0.1",
    "dnspython>=2.8.0",
    "netaddr>=1.3.0",
    "pyyaml>=6.0.2",
    "xmltodict>=1.0.2",
]

[project.optional-dependencies]
dev = ["ansible-dev-tools>=25.8.3", "ansible-lint>=25.9.0"]
test = [
    "molecule>=25.9.0",
    "pytest>=8.4.2",
    "pytest-ansible>=25.8.0",
    "pytest-xdist>=3.8.0",
]

[tool.black]
line-length = 100

[tool.pytest.ini_options]
addopts = ["-vvv", "-n", "2", "--log-level", "WARNING", "--color", "yes"]
filterwarnings = ['ignore:AnsibleCollectionFinder has already been configured']
testpaths = ["tests"]
